# dev-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  REVIEW.md  WORKFLOW.md  changed_files.json  docker-compose.yml  final_summary.json  implementation.txt  package-lock.json  package.json  plan.json  pyproject.toml  requirements.txt  test_plan.json  verification.json
.claude/: CLAUDE.md
app/: agent_sdk_client.py  approvals.py  chat_inputs.py  config.py  container_runner.py  discord_adapter.py  discord_presenters.py  github_client.py  health_check.py  hook_runner.py  issue_draft.py  issue_scheduler.py  local_runner.py  logging_setup.py  main.py  orchestrator.py  pipeline.py  planning_agent.py  process_registry.py  proof_of_work.py  repo_profiler.py  requirements_agent.py  requirements_flow.py  run_request.py  state_store.py  verification_profiles.py  workflow_loader.py  workspace_manager.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  GITHUB_APP_SETUP.md  MIGRATION_FIRST_PR.md  PROJECT_V2_SETUP.md
scripts/: agent_after_create.sh  agent_after_run.sh  agent_before_remove.sh  agent_before_run.sh  build_agent_policies.py
tests/: helpers.py  test_agent_evals_scaffold.py  test_agent_sdk_client.py  test_approvals.py  test_candidate_policy.py  test_chat_inputs.py  test_chat_port.py  test_claude_runner.py  test_codex_app_server_backend.py  test_codex_runner.py  test_config.py  test_discord_attachments.py  test_discord_issue_mirroring.py  test_discord_presenters.py  test_discord_scheduler.py  test_docker_supervisor.py  test_github_client.py  test_graceful_shutdown.py  test_health_check.py  test_hook_runner.py  test_incident_bundle.py  test_issue_scheduler.py  test_logging_setup.py  test_main.py  test_orchestrator.py  test_pipeline.py  (+20 more)
(+60 files in other folders)
